Sidebar, chart and radio contrast fix. Only small fixes left

--- a/src/less/components/radio.less
+++ b/src/less/components/radio.less
@@ -108,7 +108,6 @@ fieldset {
 @media (forced-colors: active) {
     input[type="radio"] {
         &:checked + label:before {
-            background-image: none;
             border-style: dashed;
         }
     }
