--- a/src/less/components/topbar.less
+++ b/src/less/components/topbar.less
@@ -72,7 +72,7 @@
         left: 1rem;
         padding: 0;
         border: 0;
-        outline: 0;
+        outline: 1px solid transparent;
         align-self: center;
 
         &:hover {
@@ -681,17 +681,19 @@ each(@grid-breakpoints, .(@min-width, @infix) {
         border: 3px solid;
     }
 
+    .topbar-btn {
+        &:hover {
+            outline: 3px solid;
+        }
+    }
+
     .nav-group {
         .nav-leaf {
-            &.active {
-                font-weight: 1000;
-            }
-
             a {
                 border-bottom: 1px solid;
 
-                .active,
-                &:hover {
+                &:hover,
+                &.active {
                     font-weight: 1000;
                     border-bottom: 4px solid;
                 }
