--- a/src/less/components/validation.less
+++ b/src/less/components/validation.less
@@ -98,12 +98,3 @@
         }
     }
 }
-
-@media (forced-colors: active) {
-    .radio,
-    .radio-inline,
-    &.radio label,
-    &.radio-inline label {
-        filter: contrast(1);
-    }
-}
